Fixed French results title. Fixed app breaking when sizing from mobile to desktop. Changed tooltip to trigger visibility via a scope-level boolean, rather than on an event.

--- a/app/scss/brands/maytag/_app-main-mt.scss
+++ b/app/scss/brands/maytag/_app-main-mt.scss
@@ -268,7 +268,7 @@ header.header-desktop {
 	   		background-color: #002e5f;
 	   		text-transform: uppercase;
 	   		height: 30px;
-	   		margin: 15px 0;
+	   		margin: 40px 0 15px 0;
 
 	   		div {
 	   			color: white;
@@ -392,7 +392,7 @@ header.header-desktop {
 	position: relative;
 	left: 50%;
 	height: 380px;
-	margin-top: -25px;
+	margin-top: 10px;
 }
 
 
