--- a/app/scss/structure/_app-main.scss
+++ b/app/scss/structure/_app-main.scss
@@ -181,7 +181,7 @@ div.mobile-app-nav-arrows {
 		position: absolute;
 		display: block;
 		z-index: 2;
-		top: 98px;
+		top: 33px;
 		width: 100%;
 		background-color: #002e5f;
 
@@ -554,8 +554,8 @@ div.mobile-app-nav-arrows {
 	}
 
 	.app-answers .category img.normal[ng-src="img/start-laundry.png"] {
-		width: 130%;
-		margin-left: -9px;
+		width: 160%;
+		margin-left: -17px;
 	}
 
 	.app-content-main-top-left {
